gh-194: Migrate koryphe to Java 11. (#239)
* gh-194: Migrate koryphe to Java 11.

* gh-194: Fix imports and change usages of requireNonNullOrElseGet to requireNonNullElse.

* gh-194: Fix headers.

Co-authored-by: t511203 <t511203@users.noreply.github.com>
Co-authored-by: t92549 <80890692+t92549@users.noreply.github.com>