@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2020 Crown Copyright
+ * Copyright 2019-2022 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -56,8 +56,8 @@ public class CreateObject extends KorypheFunction<Object, Object> {
 
         if (isNull(value)) {
             try {
-                return objectClass.newInstance();
-            } catch (final InstantiationException | IllegalAccessException e) {
+                return objectClass.getDeclaredConstructor().newInstance();
+            } catch (final InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new RuntimeException("Unable to create a new instance of " + objectClass.getName() + " using the no-arg constructor", e);
             }
         }
